# TradeMatchingEngine

./: .gitignore  CMakeLists.txt  README.md  benchmark_results.csv
include/: MatchingEngine.hpp  Order.hpp  OrderBook.hpp
src/: MatchingEngine.cpp  OrderBook.cpp  main.cpp
src/config/: BenchmarkConfig.cpp  BenchmarkConfig.hpp
src/core/: Command.hpp  MatchingEngine.cpp  MatchingEngine.hpp  Order.hpp  OrderBook.cpp  OrderBook.hpp
src/perf/: PerformanceRecorder.cpp  PerformanceRecorder.hpp
tests/: CMakeLists.txt  OrderBookTests.cpp
